--- a/tutorial.html
+++ b/tutorial.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Left or Right</title>
+    <title>Tutorial</title>
     <style>
         body { margin: 0; }
         canvas { width: 100%; height: 100% }
@@ -14,36 +14,44 @@
 <script src="../libraries/three.js-r87/examples/js/controls/OrbitControls.js"></script>
 
 <script>
-    var Camera, Scene, Renderer, Container, Stats, AxisHelper, 
+    "use strict";
+    function Block(mesh, move, status) {
+      this.mesh = mesh;
+      this.move = new THREE.Vector3(move, 0, 0);
+      this.status = status;
+    }
+
+    var Camera, Scene, Renderer, Container, Stats, AxisHelper, Controls,
+        BaffleGeometry, BaffleMaterial, FieldGeometry, FieldMaterial,
         Mouse = new THREE.Vector2(), Vector0 = new THREE.Vector3(0,0,0);
-    var n= 100, camera_position ={
-            x: 0    ,
+    var n = 50, camera_position ={
+            x: 0,
             y: n/2,
-            z: n/2
+            z: n*0.8
         }, c_c ={
             x: 1,
             y: 1,
             z: 1
         }, f_c = {
             x: n*c_c.x/2,
-            y: c_c.y/2  ,
+            y: c_c.y/2,
             z: n
         }, b_c = {
             x: c_c.x/2,
             y: c_c.y,
             z: n
-        }, center = 0, move_cubes = 0, baffle_status = 0, move_baffle = 0, animate_speed = f_c.x/200,
-        rotate_speed = Math.PI / 720, fall_speed = c_c.x/20, angle = 0, status_field = null, overweight = 0,
-        on_edge = 0, start_round = false, draw = false;
+        }, animate_speed = c_c.x/4, rotate_speed = Math.PI / 720, fall_speed = c_c.x/20,
+        fall_position = 0, angle = 0, overweight = 0, on_edge = 1, round = 0,
+        begin_round = false, middle_round = false, end_round = false, draw = false;
 
-    //Массив кубов, поле
-    var Cubes = [], MoveCubes = [], StatusCubes = [], Field, Baffle;
+    //Массив кубов, поле, перегородка
+    var Cubes = [[]], DropedCubes = [], Field = [], Baffle = [];
 
     init();
     animate();
 
-    function init() {
 
+    function init() {
         Container = document.createElement( 'div' );
         document.body.appendChild( Container );
 
@@ -66,27 +74,26 @@
             new THREE.Color(0x3B005C),
             new THREE.Color(0x00A86B),
             new THREE.Color(0xDC143C)];
-        var BaffleGeometry = new THREE.BoxGeometry( b_c.x, b_c.y, b_c.z );
-        var BaffleMaterial = new THREE.MeshBasicMaterial( {color: 0x00ffff, side: THREE.DoubleSide} );
-        Baffle = new THREE.Mesh( BaffleGeometry, BaffleMaterial );
-        Baffle.position.y +=b_c.y/2+c_c.y;
-        var FieldGeometry = new THREE.BoxGeometry( f_c.x, f_c.y, f_c.z );
-        var FieldMaterial = new THREE.MeshBasicMaterial( {color: 0xff00ff, side: THREE.DoubleSide} );
-        Field = new THREE.Mesh( FieldGeometry, FieldMaterial );
-        Field.position.y -=f_c.y/2;
-        Scene.add( Field );
-        Scene.add( Baffle );
+        BaffleGeometry = new THREE.BoxGeometry( b_c.x, b_c.y, b_c.z );
+        BaffleMaterial = new THREE.MeshBasicMaterial( {color: 0x00ffff, side: THREE.DoubleSide} );
+        Baffle.push(new Block(new THREE.Mesh( BaffleGeometry, BaffleMaterial ), 0, 0));
+        Baffle[round].mesh.position.y += b_c.y/2 + c_c.y;
+        FieldGeometry = new THREE.BoxGeometry( f_c.x, f_c.y, f_c.z );
+        FieldMaterial = new THREE.MeshBasicMaterial( {color: 0xff00ff, side: THREE.DoubleSide} );
+        Field.push(new Block(new THREE.Mesh( FieldGeometry, FieldMaterial ), 0, 0));
+        Field[round].mesh.position.y -= f_c.y/2;
+        Scene.add( Field[round].mesh );
+        Scene.add( Baffle[round].mesh );
+        Cubes.push([]);
         for (var i=0; i<n; i++) {
-            Cubes.push(new THREE.Mesh(new THREE.BoxGeometry( c_c.x, c_c.y, c_c.z ),
-                new THREE.MeshLambertMaterial( { color: Colors[i%6] } )));
-            Cubes[i].position.z = -n/2 + i + c_c.z/2 ;
-            Cubes[i].position.y += c_c.y/2;
             var way = Math.random();
             if (way < 0.5) way = -1;
-                else way =1;
-            MoveCubes.push(way);
-            StatusCubes.push(0);
-            Scene.add(Cubes[i]);
+            else way =1;
+            Cubes[round].push(new Block(new THREE.Mesh(new THREE.BoxGeometry( c_c.x, c_c.y, c_c.z ),
+                new THREE.MeshLambertMaterial( { color: Colors[i%6] } )), way, 0));
+            Cubes[round][i].mesh.position.z = -n/2 + i + c_c.z/2;
+            Cubes[round][i].mesh.position.y += c_c.y/2;
+            Scene.add(Cubes[round][i].mesh);
         }
 
         Renderer = new THREE.WebGLRenderer({antialias: true});
@@ -112,41 +119,9 @@
 
     function onWindowKeyDown( event ) {
         event.preventDefault();
-        if (event.keyCode == 82)//r
-        {
-            start_round = true;
-        }
-        if (event.keyCode == 81)//q
-        {
-            move_cubes = -1;
-        }
         if (event.keyCode == 32)//space
         {
-            move_cubes = 0;
-        }
-        if (event.keyCode == 69)//e
-        {
-            move_cubes = 1;
-        }
-        if (event.keyCode == 87)//w
-        {
-            if (center!=0)
-                move_baffle = 1;
-        }
-        if (event.keyCode == 83)//s
-        {
-            if (center!=0)
-                move_baffle = -1;
-        }
-        if (event.keyCode == 65)//a
-        {
-            if (baffle_status==-1)
-                move_baffle = -1;
-        }
-        if (event.keyCode == 68)//d
-        {
-            if (center!=0)
-                move_baffle = -1;
+            begin_round = true;
         }
     }
 
@@ -162,78 +137,141 @@
         Stats.update();
         Controls.update();
     }
-    
-    function render() {
-        //начало раунда
-        if (start_round &&  overweight  == 0 && !draw)
+
+    //начало раунда
+    function init_round() {
+        if (begin_round &&  overweight  === 0 && !draw)
         {
-            for (var i=0; i<n; i++) {
-                if (Cubes[i].position.x - c_c.x / 2 - animate_speed <= -f_c.x / 2 ||
-                    Cubes[i].position.x + c_c.x / 2 + animate_speed >= f_c.x / 2)
-                    StatusCubes[i] = MoveCubes[i];
-                if (StatusCubes[i] == 0)
-                    Cubes[i].position.x += MoveCubes[i] * animate_speed;
-                else overweight += StatusCubes[i];                
+            for (var i=0; i<Cubes[round].length; i++) {
+                if (Cubes[round][i].mesh.position.x - c_c.x / 2 - animate_speed  <= -f_c.x / 2 ||
+                    Cubes[round][i].mesh.position.x + c_c.x / 2 + animate_speed >= f_c.x / 2)
+                    Cubes[round][i].status = Cubes[round][i].move.x;
+                if (Cubes[round][i].status === 0)
+                    Cubes[round][i].mesh.position.x += Cubes[round][i].move.x * animate_speed;
+                else overweight += Cubes[round][i].status;
             }
             //проверка на равномерное разделение
-            if  (StatusCubes[0] != 0 && overweight == 0)
+            if  (Cubes[round][0].status !== 0 && overweight === 0)
                 draw = true;
-            if (overweight > 0) 
-                status_field = 1;
-            else 
-                status_field = -1;   
+            if (draw){
+                end_round = true;
+                begin_round = false;
+            }
+            if (overweight > 0) {
+                Field[round].status = 1;
+                begin_round = false;
+                middle_round = true;
+            }
+            if (overweight < 0)
+            {
+                Field[round].status = -1;
+                begin_round = false;
+                middle_round = true;
+            }
         }
-        if (baffle_status==-1){
+    }
+
+    //движение перегордки
+    function move_buffle() {
+        if (middle_round && Baffle[round].status !== -1) {
+            if (overweight  !== 0)
+                Baffle[round].move.y = -1;
+            if (Baffle[round].move.y === -1)
+                Baffle[round].mesh.position.y -= animate_speed;
+            if (Baffle[round].mesh.position.y - b_c.y/2 - animate_speed < f_c.y/2 + Field[round].mesh.position.y)
+                Baffle[round].status = -1;
+        }
+    }
+
+    function move_field() {    
+        if (middle_round && Baffle[round].status === -1){
             //отступ от края            
             if (on_edge < c_c.x/2)
                     on_edge += animate_speed;
             else 
-                for (var i=0; i<n; i++)                  
-                    if (status_field == StatusCubes[i])                  
-                        StatusCubes[i] += status_field;
+                for (var i=Cubes[round].length-1; i>-1; i--)
+                    if (Field[round].status === Cubes[round][i].status){
+                        //Cubes[round][i].status += Field[round].status;
+                        DropedCubes.push(Cubes[round][i]);
+                        Cubes[round].splice(i, 1);
+                    }                  
             //поворот поля
             if (Math.abs(angle / rotate_speed)  <= 100){
-                angle -= rotate_speed*status_field;
+                angle -= rotate_speed*Field[round].status;
                 Scene.rotation.z = angle;                                 
             }
-            for (var i=0; i<n; i++){
-                if (1 == Math.abs(StatusCubes[i]))                    
-                        Cubes[i].position.x += status_field * animate_speed;                
+            for (var i=0; i<Cubes[round].length; i++){
+                if (1 === Math.abs(Cubes[round][i].status))
+                        Cubes[round][i].mesh.position.x += Field[round].status * animate_speed;
                 //движение меньшества  
-                if (Cubes[i].position.x - c_c.x / 2  <= b_c.x / 2 &&
-                    Cubes[i].position.x + c_c.x / 2  >= -b_c.x / 2)
-                    StatusCubes[i] -= status_field;
-                //падение большинства
-                if (2 * status_field == StatusCubes[i])           
-                    {                 
-                        j=+2*fall_speed;
-                        Cubes[i].rotation.z += -status_field * rotate_speed * 5;
-                        Cubes[i].position.x += status_field * j;  
-                        Cubes[i].position.y += -2 * (Math.exp(j)- Math.exp(j-fall_speed));                
-                    }
-            }   
-        }                       
-    
-        //движение всех кубов
-        if (move_cubes < 0 && center != -1 )
-            for (var i=0; i<n; i++) {
-                Cubes[i].position.x -= animate_speed;
-                if (Cubes[i].position.x - c_c.x/2 < -f_c.x/2)
-                    center = -1;
+                if (Cubes[round][i].mesh.position.x - c_c.x / 2  <= b_c.x / 2 &&
+                    Cubes[round][i].mesh.position.x + c_c.x / 2  >= -b_c.x / 2)
+                    Cubes[round][i].status -= Field[round].status;
             }
-        if (move_cubes > 0 && center != 1 )
-            for (var i=0; i<n; i++) {
-                Cubes[i].position.x += animate_speed;
-                if (Cubes[i].position.x + c_c.x / 2 > f_c.x / 2)
-                    center = 1;
+            if (Math.abs(Cubes[round][0].status) === 2)
+            {
+                end_round = true;
+                middle_round = false;
             }
-        //движение перегордки
-        if (center != 0 || overweight  != 0)
-            move_baffle = -1;
-        if (move_baffle == -1 && baffle_status != -1)
-            Baffle.position.y -= animate_speed;
-        if (Baffle.position.y - b_c.y/2 < f_c.y/2 + Field.position.y)
-            baffle_status = -1;
+        }
+    }
+
+    function drop_cubes() {
+        if (DropedCubes.length>0)
+        //падение большинства
+        for (var i=0; i<DropedCubes.length; i++){
+            fall_position=+2*fall_speed;
+            DropedCubes[i].mesh.rotation.z += -Field[round].status * rotate_speed * 5;
+            DropedCubes[i].mesh.position.x += Field[round].status * fall_position;
+            DropedCubes[i].mesh.position.y += -2 * (Math.exp(fall_position)- Math.exp(fall_position -fall_speed));
+        }
+    }
+
+    function clear_field() {
+        if (end_round){
+            if (Math.abs(angle / rotate_speed) > 1) {
+                angle += rotate_speed * Field[round].status;
+                Scene.rotation.z = angle;
+            }
+            else{
+                end_round = false;
+                begin_round = true;
+                round++;
+                Cubes.push([]);
+                Cubes[round] = Cubes[round-1].slice(0, Cubes[round-1].length)
+                for (var i=0; i<Cubes[round].length; i++) {
+                    var way = Math.random();
+                    if (way < 0.5) way = -1;
+                    else way = 1;
+                    Cubes[round][i].move.x = way;
+                    Cubes[round][i].status = 0;
+                    Cubes[round][i].mesh.position.z = -Cubes[round].length/2 + i  + c_c.z/2;
+                    Scene.add(Cubes[round][i].mesh);
+                }
+                BaffleGeometry = new THREE.BoxGeometry( b_c.x, b_c.y, Cubes[round].length );
+                Baffle.push(new Block(new THREE.Mesh( BaffleGeometry, BaffleMaterial ), 0, 0));
+                Baffle[round].mesh.position.y += b_c.y/2 + c_c.y;
+                FieldGeometry = new THREE.BoxGeometry( f_c.x, f_c.y, Cubes[round].length );
+                Field.push(new Block(new THREE.Mesh( FieldGeometry, FieldMaterial ), 0, 0));
+                Field[round].mesh.position.y -= f_c.y/2;
+                Scene.remove( Field[round-1].mesh );
+                Scene.remove( Baffle[round-1].mesh );
+                Scene.add( Field[round].mesh );
+                Scene.add( Baffle[round].mesh );
+                overweight = 0;
+                //on_edge = 0;
+                draw = false;
+            }
+        }
+    }
+
+    function render() {
+        init_round();
+        move_buffle();
+        move_field();
+        clear_field();
+        drop_cubes();
+        //setTimeout(end_round, 5000);
         Renderer.render( Scene, Camera );            
     }
 </script>
